# cookiecutter-apex-python

./: .readthedocs.yaml  Makefile  README.md  cookiecutter.json  docs-requirements.txt  pyproject.toml  setup.sh
docs/: conf.py  index.md
docs/_static/css/: custom.css
docs/_templates/: footer-item-github.html  sidebar-divider.html
docs/features-reference/: dev.md  docs.md  features.md  formatters.md  index.md  tests.md
docs/installation/: index.md
docs/resources/: index.md
docs/usage/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: LICENSE  Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
