[tool.poetry]
name = "cookiecutter-apex-python"
version = "0.1.0"
description = "Comprehensive Cookiecutter template for the best Python projects."
authors = ["Wyatt  Walsh <wyattowalsh@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5"
pydata-sphinx-theme = "^0.13.0"
sphinx-copybutton = "^0.5.1"
myst-parser = "^0.19.1"
sphinxcontrib-mermaid = "^0.8.1"
sphinx-git = "^11.0.0"
sphinx-markdown-builder = "^0.5.5"
sphinx-design = "^0.3.0"
sphinx-autobuild = "^2021.3.14"
sphinx-hoverxref = "^1.3.0"
sphinx-sitemap = "^2.5.0"
sphinx-togglebutton = "^0.3.2"
sphinx-favicon = "^0"
sphinxcontrib-jquery = "^2"

[tool.poetry.group.formatters]
optional = true

[tool.poetry.group.formatters.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
pylint = "^2.16.3"
autoflake = "^2.0.1"
pylama = {extras = ["all"], version = "^8.4.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["hooks"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
ignore-init-module-imports = true

[tool.pylama]
skip = "*/.tox/*,*/.env/*"
linters = "eradicate,mccabe,pycodestyle,pyflakes,pylint,isort,pydocstyle"